# 3xui-shop

./: .dockerignore  .env.example  .gitignore  0d6e179d7d34_user_trial_period_and_referral_model.py  Dockerfile  LICENSE  README.md  README.ru_RU.md  delete_logs.sh  docker-compose.yml  plans.example.json  plans.json  pyproject.toml  traefik.yml  update_translations.sh
.github/workflows/: release.yml
app/: __main__.py  config.py  helpers.py  logger.py  utils.py
app/bot/: commands.py  navigation.py
app/bot/filters/: __init__.py  is_admin.py  is_dev.py  is_maintenance_mode.py  is_private.py
app/bot/keyboards/: admin_tools.py  back.py  download.py  main_menu.py  notification.py  pay.py  payment.py  payment_method.py  profile.py  subscription.py  support.py
app/bot/middlewares/: __init__.py  api.py  config.py  database.py  garbage.py  maintenance.py  services.py  throttling.py
app/bot/models/: __init__.py  callback.py  client.py  client_data.py  connection.py  enums.py  invite_stats.py  plan.py  services.py  services_container.py  subscription_data.py
app/db/: alembic.ini  database.py
bot/: localization.yaml  main.py  subscriptions.json
bot/database/: crud.py  methods.py  models.py  session.py
bot/handlers/: main_menu.py  profile.py  subscription.py
bot/keyboards/: back_keyboard.py  main_menu_keyboard.py  subscription_keyboard.py
bot/middlewares/: user_check.py
bot/migrations/: alembic.ini  env.py
bot/utils/: api.py  config.py  helpers.py  localization.py  logger.py  subscriptions.py
scripts/: delete_logs.sh  generate_migration.sh  install.sh  manage_migrations.sh  manage_translations.sh  update_translations.sh
(+153 files in other folders)
